Center the canvas

--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 #space {
   background-color: black;
-  border: 1px solid black;
-}
-/*#container {
-  background-color: black;
-  width: 800px;
-  height: 600px;
   margin:0 auto;
-}*/
+  display: block;
+}
 
 .enemy {
   width: 50px;
