--- a/style.css
+++ b/style.css
@@ -22,6 +22,6 @@
 }
 
 @font-face {
-  font-family: 'Telagrama';
+  font-family: 'Telegrama';
   src: url("fonts/telegrama_raw.otf") format("opentype");
 }
