Need to add hidden div with text so font will load for title screen

--- a/style.css
+++ b/style.css
@@ -25,3 +25,7 @@
   font-family: 'Telegrama';
   src: url("fonts/telegrama_raw.otf") format("opentype");
 }
+
+body {
+  font-family: 'Telegrama';
+}
